changes made in forgotpassword

--- a/src/skydrop/view/ForgotPassword.form
+++ b/src/skydrop/view/ForgotPassword.form
@@ -217,7 +217,7 @@
             <Container class="javax.swing.JPanel" name="verifypanel">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="10" y="150" width="230" height="80"/>
+                  <AbsoluteConstraints x="10" y="150" width="230" height="90"/>
                 </Constraint>
               </Constraints>
 
@@ -228,7 +228,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="code" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="verification" alignment="0" max="32767" attributes="0"/>
+                              <Component id="verificationCodeField" alignment="0" max="32767" attributes="0"/>
                               <Component id="verifybtn" alignment="0" pref="202" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace pref="22" max="32767" attributes="0"/>
@@ -241,18 +241,18 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="code" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                          <Component id="verification" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="verifybtn" min="-2" max="-2" attributes="0"/>
+                          <Component id="verificationCodeField" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
+                          <Component id="verifybtn" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace pref="14" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Component class="javax.swing.JTextField" name="verification">
+                <Component class="javax.swing.JTextField" name="verificationCodeField">
                   <Events>
-                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verificationActionPerformed"/>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="verificationCodeFieldActionPerformed"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="code">
@@ -270,7 +270,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Container class="javax.swing.JPanel" name="jPanel4">
+            <Container class="javax.swing.JPanel" name="submitpanel">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="10" y="250" width="230" height="90"/>
@@ -283,7 +283,7 @@
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="passtxt" max="32767" attributes="0"/>
+                              <Component id="passtxtfield" max="32767" attributes="0"/>
                               <Component id="newpassword" min="-2" pref="96" max="-2" attributes="0"/>
                               <Component id="submitbtn" alignment="0" pref="201" max="32767" attributes="0"/>
                           </Group>
@@ -297,7 +297,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="newpassword" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="passtxt" min="-2" max="-2" attributes="0"/>
+                          <Component id="passtxtfield" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="submitbtn" min="-2" max="-2" attributes="0"/>
                           <EmptySpace pref="11" max="32767" attributes="0"/>
@@ -311,12 +311,15 @@
                     <Property name="text" type="java.lang.String" value="New Password"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="passtxt">
+                <Component class="javax.swing.JTextField" name="passtxtfield">
                 </Component>
                 <Component class="javax.swing.JButton" name="submitbtn">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Submit"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="submitbtnActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
