--- a/src/skydrop/view/AddProduct.form
+++ b/src/skydrop/view/AddProduct.form
@@ -80,7 +80,7 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="price" pref="190" max="32767" attributes="0"/>
                               <Component id="productName" pref="190" max="32767" attributes="0"/>
-                              <Component id="quantity" pref="190" max="32767" attributes="0"/>
+                              <Component id="quantity1" pref="190" max="32767" attributes="0"/>
                               <Component id="categoryBox" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
@@ -124,7 +124,7 @@
                           </Group>
                           <EmptySpace min="16" pref="16" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="quantity" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="quantity1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="16" pref="16" max="-2" attributes="0"/>
@@ -265,9 +265,9 @@
         </Container>
         <Component class="javax.swing.JTextField" name="productName">
         </Component>
-        <Component class="javax.swing.JTextField" name="quantity">
+        <Component class="javax.swing.JTextField" name="quantity1">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="quantityActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="quantity1ActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="price">
