--- a/src/skydrop/view/AddProduct.form
+++ b/src/skydrop/view/AddProduct.form
@@ -311,7 +311,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="ADD PRODUCT"/>
+                <Property name="text" type="java.lang.String" value="ADD PRODUCTS"/>
               </Properties>
             </Component>
           </SubComponents>
